k8s/creative.yml
apiVersion: v1
kind: Service
metadata:
  name: creative
  namespace: tfb-servers
spec:
  type: NodePort
  ports:
  - name: creative
    port: 30002
    targetPort: 30002
    nodePort: 30002
  selector:
    run: creative
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: creative
  namespace: tfb-servers
  labels:
    run: creative
spec:
  serviceName: "creative"
  replicas: 1
  selector:
    matchLabels:
      run: creative
  template:
    metadata:
      labels:
        run: creative
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      volumes:
      - name: git-repo-volume
        emptyDir: {}
      - name: git-secret-volume
        secret:
          secretName: git-secret
          defaultMode: 256
      - name: gradle-credentials
        secret:
          secretName: gradle-credentials
      containers:
      - name: creative
        image: itzg/minecraft-server
        ports:
          - containerPort: 25565
        volumeMounts:
          - name: creative-pv
            mountPath: /data
          - name: git-repo-volume
            mountPath: /git-data
        resources:
          requests:
            memory: "5Gi"
        readinessProbe:
          exec:
            command: [ "/usr/local/bin/mc-monitor", "status", "--host", "localhost" ]
          initialDelaySeconds: 20
          periodSeconds: 5
          failureThreshold: 20
        livenessProbe:
          exec:
            command: ["/usr/local/bin/mc-monitor", "status", "--host", "localhost"]
          initialDelaySeconds: 120
          periodSeconds: 60
  volumeClaimTemplates:
  - metadata:
      name: creative-pv
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
