k8s/lobby.yml
apiVersion: v1
kind: Service
metadata:
  name: lobby
  namespace: tfb-servers
spec:
  ports:
    - port: 25565
      targetPort: 25565
  selector:
    run: lobby
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lobby
  namespace: tfb-servers
  labels:
    run: lobby
spec:
  serviceName: "lobby"
  replicas: 1
  selector:
    matchLabels:
      run: lobby
  template:
    metadata:
      labels:
        run: lobby
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      volumes:
      - name: git-repo-volume
        emptyDir: {}
      - name: git-secret-volume
        secret:
          secretName: git-secret
          defaultMode: 256
      - name: gradle-credentials
        secret:
          secretName: gradle-credentials
      containers:
      - name: lobby
        image: itzg/minecraft-server
        ports:
          - containerPort: 25565
        volumeMounts:
          - name: lobby-pv
            mountPath: /data
          - name: git-repo-volume
            mountPath: /git-data
        resources:
          requests:
            memory: "4Gi"
            cpu: "1000m"
          limits:
            memory: "4Gi"
            cpu: "1000m"
        readinessProbe:
          exec:
            command: [ "/usr/local/bin/mc-monitor", "status", "--host", "localhost" ]
          initialDelaySeconds: 20
          periodSeconds: 5
          failureThreshold: 20
        livenessProbe:
          exec:
            command: ["/usr/local/bin/mc-monitor", "status", "--host", "localhost"]
          initialDelaySeconds: 120
          periodSeconds: 60
  volumeClaimTemplates:
  - metadata:
      name: lobby-pv
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
