k8s/proxy.yml
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: tfb-servers
  annotations:
    "mc-router.itzg.me/externalServerName": "mc.theflyingbirds.net"
spec:
  ports:
    - name: minecraft
      port: 25565
      targetPort: 25565
    - name: plan
      port: 8804
      targetPort: 8804
  selector:
    run: proxy
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: proxy
  namespace: tfb-servers
  labels:
    run: proxy
spec:
  serviceName: "proxy"
  replicas: 1
  selector:
    matchLabels:
      run: proxy
  template:
    metadata:
      labels:
        run: proxy
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      volumes:
      - name: git-repo-volume
        emptyDir: {}
      - name: git-secret-volume
        secret:
          secretName: git-secret
          defaultMode: 256
      - name: gradle-credentials
        secret:
          secretName: gradle-credentials
      containers:
      - name: proxy
        image: itzg/bungeecord
        ports:
          - containerPort: 25565
        volumeMounts:
          - name: proxy-pv
            mountPath: /server
          - name: git-repo-volume
            mountPath: /git-data
        resources:
          requests:
            memory: "4Gi"
          limits:
            memory: "4Gi"
        readinessProbe:
          exec:
            command: [ "/usr/local/bin/mc-monitor", "status", "--host", "localhost" ]
          initialDelaySeconds: 20
          periodSeconds: 5
          failureThreshold: 20
        livenessProbe:
          exec:
            command: ["/usr/local/bin/mc-monitor", "status", "--host", "localhost"]
          initialDelaySeconds: 120
          periodSeconds: 60
  volumeClaimTemplates:
  - metadata:
      name: proxy-pv
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
