k8s/vanilla.yml
apiVersion: v1
kind: Service
metadata:
  name: vanilla
  namespace: tfb-servers
spec:
  type: NodePort
  ports:
  - name: vanilla
    port: 30005
    targetPort: 30005
    nodePort: 30005
  selector:
    run: vanilla
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vanilla
  namespace: tfb-servers
  labels:
    run: vanilla
spec:
  serviceName: "vanilla"
  replicas: 1
  selector:
    matchLabels:
      run: vanilla
  template:
    metadata:
      labels:
        run: vanilla
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      volumes:
      - name: git-repo-volume
        emptyDir: {}
      - name: git-secret-volume
        secret:
          secretName: git-secret
          defaultMode: 256
      - name: gradle-credentials
        secret:
          secretName: gradle-credentials
      containers:
      - name: vanilla
        image: itzg/minecraft-server
        ports:
          - containerPort: 25565
        volumeMounts:
          - name: vanilla-pv
            mountPath: /data
          - name: git-repo-volume
            mountPath: /git-data
        resources:
          requests:
            memory: "8Gi"
        readinessProbe:
          exec:
            command: [ "/usr/local/bin/mc-monitor", "status", "--host", "localhost", "-port", "30005" ]
          initialDelaySeconds: 20
          periodSeconds: 5
          failureThreshold: 20
        livenessProbe:
          exec:
            command: ["/usr/local/bin/mc-monitor", "status", "--host", "localhost", "-port", "30005"]
          initialDelaySeconds: 120
          periodSeconds: 60
  volumeClaimTemplates:
  - metadata:
      name: vanilla-pv
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
