k8s/plan-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: stats-ingress
 namespace: tfb-servers
 annotations:
   cert-manager.io/cluster-issuer: theflyingbirds-prod
   nginx.ingress.kubernetes.io/proxy-body-size: "10000m"
   nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
   nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  tls:
  - hosts:
    - stats.theflyingbirds.net
    secretName: stats-tls
  rules:
  - host: stats.theflyingbirds.net
    http:
      paths:
      - backend:
          service:
            name: proxy
            port:
              number: 8804
        path: /
        pathType: Prefix
